--- a/html/formation.html
+++ b/html/formation.html
@@ -25,6 +25,11 @@
 </nav>
 </header>
 <main>
+<h2>Formation:</h2>
+<p>2017-2018: 6 mois de formation développeur js</p>
+<p>2017: 3 mois de formation intégrateur web </p>
+<p>2014-2016: 2 ans de d'école d'ingénieurie mécanique</p>
+<p>2012-2014: 2 ans de classe préparatoire</p>
 </main>
 <footer>
 <h2>N'hésistez pas à utiliser la navigation et à vous balader sur mon site<h2>
