--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="entete">
 <img src="image/engrenage.png" alt="logo" id="logo"/>
 <div id="header">
-<h1>Mon CV d'intégrateur web</h1>
+<h1>Mon CV d'intégrateur web junior</h1>
 <h2>Erwan JEAN BAPTISTE, néophyte du web</h2>
 </div>
 </div>
@@ -29,7 +29,23 @@
 <div id="anim1">
 <span id="bienvenue">Bienvenue </span><br>
 <span id="surmon">Sur Mon </span><br>
-<span id="site">Site</span>
+<span id="site">CV</span>
+</div>
+<div id="form">
+<h2>Formations principales:</h2>
+<p>-9mois d'intégrateur/développeur web</p>
+<p>-2ans d'ingénieurie mécanique</p>
+<h2>Compétences :</h2>
+<p>-html basique</p>
+<p>-css basique</p>
+<p>-javascript basique</p>
+<p>-wordpress basique</p>
+<p>-linux basique</p>
+<p>-anglais écrit basique</p>
+<h2>Expériences :</h2>
+<p>-cuisinier</p>
+<p>-SNCF</p>
+<p>-pompier</p>
 </div>
 </main>
 <footer>
