--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </nav>
 </header>
 <main>
+<img src="image/numé.png" alt="photo numérique" id="num"/>
 <img src="image/maphoto.jpg" alt="maphoto" id="maphoto"/>
 <div id="anim1">
 <span id="bienvenue">Bienvenue </span><br>
