--- a/html/Expérience.html
+++ b/html/Expérience.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 <header>
+<div id="bandeau">
+</div>
 <div id="entete">
 <img src="../image/engrenage.png" alt="logo" id="logo"/>
 <div id="header">
 <h1>Mon CV d'intégrateur web</h1>
-<h2>Erwan JEAN BAPTISTE, néophyte du web</h2>
+<h2>Erwan JEAN BAPTISTE, apprenant numérique</h2>
 </div>
 </div>
 <nav>
