--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 <header>
+<div id="bandeau">
+</div>
 <div id="entete">
 <img src="image/engrenage.png" alt="logo" id="logo"/>
 <div id="header">
 <h1>Mon CV d'intégrateur web junior</h1>
-<h2>Erwan JEAN BAPTISTE, néophyte du web</h2>
+<h2>Erwan JEAN BAPTISTE, apprenant numérique</h2>
 </div>
 </div>
 <nav>
@@ -32,6 +34,7 @@
 <span id="surmon">Sur Mon </span><br>
 <span id="site">CV</span>
 </div>
+<section>
 <div id="form">
 <h2>Formations principales:</h2>
 <p>-9mois d'intégrateur/développeur web</p>
@@ -48,6 +51,12 @@
 <p>-SNCF</p>
 <p>-pompier</p>
 </div>
+<aside>
+<img src="image/JS.png" alt="JS"/>
+<img src="image/html.png" alt="html"/>
+<img src="image/CSS.png" alt="CSS"/>
+</aside>
+</section>
 </main>
 <footer>
 <h2>N'hésistez pas à utiliser la navigation et à vous balader sur mon site<h2>
