--- a/index.html
+++ b/index.html
@@ -55,12 +55,15 @@
 <img src="image/JS.png" alt="JS"/>
 <img src="image/html.png" alt="html"/>
 <img src="image/CSS.png" alt="CSS"/>
+<img src="image/linux.png" alt="linux"/>
+<img src="image/wordpress.png" alt="wordpress"/>
+<img src="image/intégrateur.png" alt="intégrateur"/>
 </aside>
 </section>
 </main>
 <footer>
 <h2>N'hésistez pas à utiliser la navigation et à vous balader sur mon site<h2>
 <p>&copy; 2017</p>
-<p>This is an email link:<a href="mailto: wawan.jb@gmail.com " target="_top"> wawan.jb@gmail.com </a></p>
+<p>This is an email link:<a href="mailto: wawan.jb@gmail.com " target="_top"> wawan.jb@gmail.com   </a></p>
 </footer>
 </body>
