--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </section>
 </main>
 <footer>
-<h2>N'hésistez pas à utiliser la navigation et à vous balader sur mon site<h2>
+<h2>N'hésistez pas à utiliser la navigation et à vous balader sur mon site</h2>
 <p>&copy; 2017</p>
 <p>This is an email link:<a href="mailto: wawan.jb@gmail.com " target="_top"> wawan.jb@gmail.com   </a></p>
 </footer>
