--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <div id="bandeau">
 </div>
 <div id="entete">
-<img src="image/engrenage.png" alt="logo" id="logo"/>
+<img src="image/engr.png" alt="logo" id="logo"/>
+<img src="image/télé.png" alt="cabine" id="cabine">
 <div id="header">
 <h1>Mon CV d'intégrateur web junior</h1>
 <h2>Erwan JEAN BAPTISTE, apprenant numérique</h2>
 </div>
+<img src="image/engr.png" alt="logo" id="logo"/>
 </div>
 <nav>
 <ul>
