--- a/html/formation.html
+++ b/html/formation.html
@@ -11,12 +11,14 @@
 <div id="bandeau">
 </div>
 <div id="entete">
-<img src="../image/engrenage.png" alt="logo" id="logo"/>
+<img src="../image/engr.png" alt="logo" id="logo"/>
+<img src="../image/télé.png" alt="cabine" id="cabine">
 <div id="header">
-<h1>Mon CV d'intégrateur web</h1>
+<h1>Mon CV d'intégrateur web junior</h1>
 <h2>Erwan JEAN BAPTISTE, apprenant numérique</h2>
 </div>
-</div>
+<img src="../image/engr.png" alt="logo" id="logo"/>
+</div>s
 <nav>
 <ul>
 <li><a href="../index.html">Acceuil</a></li>
