--- a/index.html
+++ b/index.html
@@ -3,28 +3,27 @@
 <head>
 <title>Mon CV d'intégrateur web</title>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="css/style.css" type="text/css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Artifika" rel="stylesheet">
+<script src="https://use.fontawesome.com/f66664ac40.js"></script>
 </head>
 <body>
 <header>
 <div id="bandeau">
 </div>
 <div id="entete">
-<img src="image/engr.png" alt="logo" id="logo"/>
-<img src="image/télé.png" alt="cabine" id="cabine">
 <div id="header">
 <h1>Mon CV d'intégrateur web junior</h1>
 <h2>Erwan JEAN BAPTISTE, apprenant numérique</h2>
 </div>
-<img src="image/engr.png" alt="logo" id="logo"/>
 </div>
 <nav>
 <ul>
-<li><a href="#">Acceuil</a></li>
-<li><a href="html/formation.html">Formations</a></li>
-<li><a href="html/Expérience.html">Expériences</a></li>
-<li><a href="#">Ce que j'aime</a></li>
+<li><a href="#"><span>Acceuil</span><i class="fa fa-home" aria-hidden="true"></i></a></li>
+<li><a href="html/formation.html"><span>Formations</span><i class="fa fa-book" aria-hidden="true"></i></a></li>
+<li><a href="html/Expérience.html"><span>Expériences</span><i class="fa fa-handshake-o" aria-hidden="true"></i></a></li>
+<li><a href="#"><span>Ce que j'aime</span><i class="fa fa-heart" aria-hidden="true"></i></a></li>
 </ul>
 </nav>
 </header>
