--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 <li><a href="#"><span>Acceuil</span><i class="fa fa-home" aria-hidden="true"></i></a></li>
 <li><a href="html/formation.html"><span>Formations</span><i class="fa fa-book" aria-hidden="true"></i></a></li>
 <li><a href="html/Expérience.html"><span>Expériences</span><i class="fa fa-handshake-o" aria-hidden="true"></i></a></li>
-<li><a href="#"><span>Ce que j'aime</span><i class="fa fa-heart" aria-hidden="true"></i></a></li>
 </ul>
 </nav>
 </header>
@@ -38,7 +37,7 @@
 <section>
 <div id="form">
 <h2>Formations principales:</h2>
-<p>-9mois d'intégrateur/développeur web</p>
+<p>-3mois intégrateur web</p>
 <p>-2ans d'ingénieurie mécanique</p>
 <h2>Compétences :</h2>
 <p>-html basique</p>
@@ -63,7 +62,6 @@
 </section>
 </main>
 <footer>
-<h2>N'hésistez pas à utiliser la navigation et à vous balader sur mon site</h2>
 <p>&copy; 2017</p>
 <p>This is an email link:<a href="mailto: wawan.jb@gmail.com " target="_top"> wawan.jb@gmail.com   </a></p>
 </footer>
