--- a/html/formation.html
+++ b/html/formation.html
@@ -28,7 +28,7 @@
 </header>
 <main>
 <h2>Formation:</h2>
-<p>2017: 3 mois de formation intégrateur web </p>
+<p>2017: 3 mois de formation d'intégrateur web </p>
 <p>2014-2016: 2 ans de d'école d'ingénieurie mécanique</p>
 <p>2012-2014: 2 ans de classe préparatoire</p>
 </main>
