--- a/html/Expérience.html
+++ b/html/Expérience.html
@@ -20,7 +20,7 @@
 </div>
 <nav>
 <ul>
-<li><a href="../index.html"><span>Acceuil</span><i class="fa fa-home" aria-hidden="true"></i></a></li>
+<li><a href="../index.html"><span>Accueil</span><i class="fa fa-home" aria-hidden="true"></i></a></li>
 <li><a href="formation.html"><span>Formations</span><i class="fa fa-book" aria-hidden="true"></i></a></li>
 <li><a href="#"><span>Expériences</span><i class="fa fa-handshake-o" aria-hidden="true"></i></a></li>
 </ul>
