--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 <nav>
 <ul>
-<li><a href="#"><span>Acceuil</span><i class="fa fa-home" aria-hidden="true"></i></a></li>
+<li><a href="#"><span>Accueil</span><i class="fa fa-home" aria-hidden="true"></i></a></li>
 <li><a href="html/formation.html"><span>Formations</span><i class="fa fa-book" aria-hidden="true"></i></a></li>
 <li><a href="html/Expérience.html"><span>Expériences</span><i class="fa fa-handshake-o" aria-hidden="true"></i></a></li>
 </ul>
