--- a/html/Aime.html
+++ b/html/Aime.html
@@ -21,18 +21,20 @@
 		<nav>
 			<ul>
 				<li><a href="../index.html"><span>Accueil</span><i class="fa fa-home" aria-hidden="true"></i></a></li>
-				<li><a href="#"><span>Formations</span><i class="fa fa-book" aria-hidden="true"></i></a></li>
+				<li><a href="formation.html"><span>Formations</span><i class="fa fa-book" aria-hidden="true"></i></a></li>
 				<li><a href="Expérience.html"><span>Expériences</span><i class="fa fa-handshake-o" aria-hidden="true"></i></a></li>
-				<li><a href="Aime.html"><span>Ce que j'aime</span><i class="fa fa-heart" aria-hidden="true"></i></a></li>
+				<li><a href="#"><span>Ce que j'aime</span><i class="fa fa-heart" aria-hidden="true"></i></a></li>
 			</ul>
 		</nav>
 	</header>
 	<main>
-		<h2>Formation:</h2>
-		<p>2018-2017: 7 mois de formation développeur JAVA</p>
-		<p>2017: 3 mois de formation d'	intégrateur web </p>
-		<p>2014-2016: 2 ans de d'école d'ingénieurie mécanique</p>
-		<p>2012-2014: 2 ans de classe préparatoire</p>
+		<h2>Ce que J'aime:</h2>
+		<p>les jeux vidéos </p>
+		<p>le bricolage</p>
+		<p>les journaux</p>
+		<p>le sport</p>
+		<p>les mangas</p>
+		<p>et bien d'autres ...</p>
 	</main>
 	<footer>
 		<p>&copy; 2017</p>
