--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mon CV d'intégrateur web</title>
+	<title>Ma présentation web</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="css/style.css" type="text/css" rel="stylesheet">
@@ -14,7 +14,7 @@
 		</div>
 		<div id="entete">
 			<div id="header">
-				<h1>Mon CV d'intégrateur web junior</h1>
+				<h1>Ma Présentation :</h1>
 				<h2>Erwan JEAN BAPTISTE, apprenant numérique</h2>
 			</div>
 		</div>
@@ -23,6 +23,7 @@
 				<li><a href="#"><span>Accueil</span><i class="fa fa-home" aria-hidden="true"></i></a></li>
 				<li><a href="html/formation.html"><span>Formations</span><i class="fa fa-book" aria-hidden="true"></i></a></li>
 				<li><a href="html/Expérience.html"><span>Expériences</span><i class="fa fa-handshake-o" aria-hidden="true"></i></a></li>
+				<li><a href="html/Aime.html"><span>Ce que j'aime</span><i class="fa fa-heart" aria-hidden="true"></i></a></li>
 			</ul>
 		</nav>
 	</header>
@@ -32,11 +33,12 @@
 		<div id="anim1">
 			<span id="bienvenue">Bienvenue </span><br>
 			<span id="surmon">Sur Mon </span><br>
-			<span id="site">CV</span>
+			<span id="site">Site</span>
 		</div>
 		<section>
 			<div id="form">
 				<h2>Formations principales:</h2>
+				<p>-7 mois développeur JAVA </p>
 				<p>-3 mois intégrateur web</p>
 				<p>-2 ans d'ingénieurie mécanique</p>
 				<h2>Compétences :</h2>
