--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div>
 		<div id="entete">
 			<div id="header">
-				<h1>Ma Présentation :</h1>
+				<h1>Mon CV de développeur web :</h1>
 				<h2>Erwan JEAN BAPTISTE, apprenant numérique</h2>
 			</div>
 		</div>
@@ -57,6 +57,7 @@
 				<img src="image/JS.png" alt="JS"/>
 				<img src="image/html.png" alt="html"/>
 				<img src="image/CSS.png" alt="CSS"/>
+				<img src="image/java.png" alt="Java">
 				<img src="image/linux.png" alt="linux"/>
 				<img src="image/wordpress.png" alt="wordpress"/>
 				<img src="image/intégrateur.png" alt="intégrateur"/>
