ajout d'une video

--- a/index.html
+++ b/index.html
@@ -28,41 +28,39 @@
 		</nav>
 	</header>
 	<main>
-		<img src="image/numé.png" alt="photo numérique" id="num"/>
-		<img src="image/maphoto.jpg" alt="maphoto" id="maphoto"/>
-		<div id="anim1">
-			<span id="bienvenue">Bienvenue </span><br>
-			<span id="surmon">Sur Mon </span><br>
-			<span id="site">Site</span>
-		</div>
-		<section>
-			<div id="form">
-				<h2>Formations principales:</h2>
-				<p>-7 mois développeur JAVA </p>
-				<p>-3 mois intégrateur web</p>
-				<p>-2 ans d'ingénieurie mécanique</p>
-				<h2>Compétences :</h2>
-				<p>-html basique</p>
-				<p>-css basique</p>
-				<p>-javascript basique</p>
-				<p>-wordpress basique</p>
-				<p>-linux basique</p>
-				<p>-anglais écrit basique</p>
-				<h2>Expériences :</h2>
-				<p>-cuisinier</p>
-				<p>-SNCF</p>
-				<p>-pompier</p>
-			</div>
-			<aside>
-				<img src="image/JS.png" alt="JS"/>
-				<img src="image/html.png" alt="html"/>
-				<img src="image/CSS.png" alt="CSS"/>
-				<img src="image/java.png" alt="Java">
-				<img src="image/linux.png" alt="linux"/>
-				<img src="image/wordpress.png" alt="wordpress"/>
-				<img src="image/intégrateur.png" alt="intégrateur"/>
-			</aside>
-		</section>
+		<video preload="preload"  id="video" autoplay="autoplay" loop="loop">
+		<source src="image/video.mp4" type="video/mp4"></source>
+		</video>
+			<img src="image/numé.png" alt="photo numérique" id="num"/>
+			<img src="image/moi.jpeg" alt="maphoto" id="maphoto"/>
+			
+				<span id="bienvenue">Bienvenue </span><br>
+				<span id="surmon">Sur Mon </span><br>
+				<span id="site">Site</span>
+			
+			<section>
+				<div id="form">
+					<h2>Formations principales:</h2>
+					<p>-7 mois développeur JAVA </p>
+					<p>-3 mois intégrateur web</p>
+					<p>-2 ans d'ingénieurie mécanique</p>
+					<h2>Expériences :</h2>
+					<p>-cuisinier</p>
+					<p>-SNCF</p>
+					<p>-pompier</p>
+				</div>
+				<aside>
+					<h2>Compétences :</h2>
+					<div>
+						<img src="image/JS.png" alt="JS"/>
+						<img src="image/java.png" alt="Java">
+						<img src="image/linux.png" alt="linux"/>
+						<img src="image/wordpress.png" alt="wordpress"/>
+						<img src="image/intégrateur.png" alt="intégrateur"/>
+					</div>
+				</aside>
+			</section>
+		
 	</main>
 	<footer>
 		<p>&copy; 2017</p>
